--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.searchForm {
+  width: 180px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 1.25rem 0px 0px 19.5rem;
+  padding: 0 0.5rem 0.25rem;
+}
+
+.App {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+main{
+  height: 200px;
+  width: 200px;
+  border: 1px grey solid;
+  margin: 1.25rem 0px 0px 19.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggleButton{
+  margin: 1.25rem 0px 0px 19.5rem;
+  padding: 0.5rem;
+  width: 200px;
+}
